# AuraFlix

./: .env.example  create_admin.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3d40f4a00c92_added_models.py
app/: config.py  database.py  main.py  models.py  schemas.py  services.py
app/admin/: auth.py  setup.py  views.py
app/routers/: auth.py  movies.py
app/tasks/: celery.py  email.py
app/utils/: dependencies.py  files.py  password.py  rate_limiter.py
